# bazel-poc

./: WORKSPACE
component/: BUILD
component/topics/: SomeTopic.cpp  SomeTopic.h
component/types/: SomeComponentType.cpp  SomeComponentType.h
core/types/: BUILD  CMakeLists.txt  GenericType.cpp  GenericType.h
servers/someserver/: BUILD  main.cpp
